<resources>
    <string name="LanguageName">English</string>
    <string name="LanguageNameInEnglish">English</string>
    <string name="LanguageCode">en</string>
    <string name="TodayAt">Today</string>
    <string name="YesterdayAt">Yesterday at</string>
    <string name="OtherAt">at</string>
    <string name="LastSeen">last seen</string>
    <string name="LastSeenDate">last seen</string>
    <string name="yesterday">Yesterday</string>
    <string name="app_name">WeiYi</string>
    <string name="hello_world">mme</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_launch">WeiYi</string>
    <string name="contacts">Contacts</string>
    <string name="meeting">Meeting</string>
    <string name="chat">Chat</string>
    <string name="options">Options</string>
    <string name="mymeetings">My Meetings</string>
    <string name="rangemeetings">Schedule a meeting</string>
    <string name="meetingcalendar">Meeting calendar</string>
    <string name="joinmeetings">Join a Meetings</string>
    <string name="title_activity_jointo_meeting">JointoMeetingActivity</string>
    <string name="meetingid">MeetingID</string>
    <string name="username">UserName</string>
    <string name="linkmeetinginfo1">Or join a meeting with an ID.</string>
    <string name="linkmeetinginfo2">Or join a meeting with a url.</string>
    <string name="linkmeetinginfo3">If you received the invitation url, please click the url to join the meeting</string>
    <string name="linkmeetinginfo4">Meeting ID is a number</string>
    <string name="meetingtopic">MeetingTopic</string>
    <string name="meetingrepeat">Whether the cycle</string>
    <string name="starttime">StartTime</string>
    <string name="startdate">StartDate</string>
    <string name="endtime">EndTime</string>
    <string name="range">Schedule meeting</string>
    <string name="attend_meeting_member">To attend the meeting</string>
    <string name="meeting_ispublish">Whether public</string>
    <string name="set">Set</string>
    <string name="sure">Sure</string>
    <string name="cancel">Cancel</string>
    <string name="drive_mode">Drive_Mode</string>
    <string name="click_speak">Click Speak</string>
    <string name="cancel_speak">Cancel Speak</string>
    <string name="tab_members">Members</string>
    <string name="tab_video">Video</string>
    <string name="tab_share">Document</string>
    <string name="take_photo">Take photo</string>
    <string name="select_from_photo">Select form folder</string>
    <string name="your_video_is_stopped">Your microphone is mute</string>
    <string name="your_mic_is_mute">Your video has stopped</string>
    <string name="your_mic_is_live">Mute your microphone has been cancelled</string>
    <string name="search">Search</string>
    <string name="groupchat">GroupChat</string>
    <string name="back">Back</string>
    <string name="connecting">Connecting...</string>
    <string name="title_activity_select_file">SelectFileActivity</string>
    <string name="title_activity_meeting_member">MeetingMemberActivity</string>
    <string name="all_mute">All_Mute</string>
    <string name="as_host">As_Host</string>
    <string name="kick_out">Kick Out</string>
    <string name="change_name">Change_Name</string>
    <string name="insert_text">Please enter the text</string>
    <string name="insert_new_name">Please lose the new name</string>
    <string name="left_q">（</string>
    <string name="right_q">）</string>
    <string name="comma">，</string>
    <string name="manager">Chairman</string>
    <string name="host">Host</string>
    <string name="me">Me</string>
    <string name="notonline">Not on the line</string>
    <string name="cancel_host">CancelHost</string>
    <string name="watch_video">WatchVideo</string>
    <string name="unwatch">CloseWatch</string>
    <string name="landing">Login</string>
    <string name="pull_to_refresh">pull_to_refresh</string>
    <string name="release_to_refresh">release_to_refresh</string>
    <string name="refreshing">Refreshing…</string>
    <string name="not_updated_yet">Temporarily not updated</string>
    <string name="updated_at">Before the last updated on %s</string>
    <string name="updated_just_now">Just update</string>
    <string name="time_error">Time_Error</string>
    <string name="start">Start</string>
    <string name="yourphone">YourPhone</string>
    <string name="StartText">Please enter your phone number.</string>
    <string name="ChooseCountry">ChooseCountry</string>
    <string name="WrongCountry">WrongCountryCode</string>
    <string name="InputPassword">InputPassword</string>
    <string name="ReInputPassword">ReInputPassword</string>
    <string name="PasswordNoMatch">PasswordNoMatch</string>
    <string name="InvalidPhoneNumber">InvalidPhoneNumber</string>
    <string name="YourPhone">YourPhone</string>
    <string name="pleaseSelect">PleaseSelect</string>
    <string name="WrongNumber">WrongNumber?</string>
    <string name="done">Finish</string>
    <string name="Loading">Loading</string>
    <string name="InvalidPwd">InvalidPwd</string>
    <string name="Code">PleaseEnterCode</string>
    <string name="hint_password">PleaseEnterCode</string>
    <string name="YourAlreadyRegidter">PleaseEnterCode</string>
    <string name="EnterCode">EnterCode</string>
    <string name="SentSmsCode">We are sending an SMS activation code to your mobile phone\n</string>
    <string name="CallText">If you received SMS, the system will be in%1$sSeconds later again send text messages</string>
    <string name="Calling">System has again send text messages to you, please check</string>
    <string name="InvalidCode">InvalidCode</string>
    <string name="FirstName">FirstName (required)</string>
    <string name="LastName">LastName (required)</string>
    <string name="RegisterText">Set up your name and password</string>
    <string name="RegisterTextResetPwd">Set up your new password</string>
    <string name="CancelRegistration">cancellation of registration</string>
    <string name="YourName">YourName</string>
    <string name="PleaseEnter">PleaseEnter</string>
    <string name="And"> And </string>
    <string name="onlyFirstName">onlyFirstName</string>
    <string name="Password">Password</string>
    <string name="OK">Ok</string>
    <string name="check_company">Check_Company</string>
    <string name="DNS_name">Company Name</string>
    <string name="input_email">Email</string>
    <string name="phone_login">Use phone number</string>
    <string name="email_login">Use email</string>
    <string name="user_account">Phone Number</string>
    <string name="company_login">Company Login</string>
    <string name="SysTemExpressionCatch">SysTemExpressionCatch</string>
    <string name="WaitingForNetwork">WaitingForNetwork</string>
    <string name="SendEmailFaildPleaseCheck">SendEmailFaildPleaseCheck</string>
    <string name="PleaseUseCompanyEmail">PleaseUseCompanyEmail</string>
    <string name="PasswordError">PasswordError</string>
    <string name="AccountError">AccountError</string>
    <string name="AccountFreeze">AccountFreeze</string>
    <string name="DomainError">DomainError</string>
    <string name="NoUserIs">NoUserIs</string>
    <string name="UpdateUserMSGError">Update user information failure</string>
    <string name="AccountNoActication">Account not activated</string>
    <string name="DeviceUpdateFaild">User equipment change failure</string>
    <string name="UserExist">Account has been registered</string>
    <string name="RegisterFaild">registration failed </string>
    <string name="login_agin">Send again</string>
    <string name="prompt">This domain name that you use the site, in the organization are usually only need sitename convert automaticallysitename.yunboxin.com</string>
    <string name="register">register</string>
    <string name="sendeAll">SendMembers：</string>
    <string name="sendyou">SendYou</string>
    <string name="talk">Says：</string>
    <string name="sendto">SendTo</string>
    <string name="ranger_faild">Arrange the meeting failed</string>
    <string name="ranger_success">Arrange the meeting successful</string>
    <string name="delete_meeting_faild">Delete the meeting failed</string>
    <string name="delete_meeting_success">Delete the meeting successful</string>
    <string name="company_meeting_id">Company meeting ID</string>
    <string name="meeting_id_is_empty">The meeting ID can not be empty</string>
    <string name="direct_id_is_empty">The direct ID can not be empty</string>
    <string name="password_is_empty">The Password is empty</string>
    <string name="user_name_is_empty">The user name ID can not be empty</string>
    <string name="topic_is_empty">The theme can not be empty</string>
    <string name="share_pad">share_pad</string>
    <string name="share_screen">share_screen</string>
    <string name="tools">Tools</string>
    <string name="page">Page</string>
    <string name="logout">Logout</string>
    <string name="company_meeting">Company Meeting </string>
    <string name="members">Members(%1$d)</string>
    <string name="apply_audio">apply_audio</string>
    <string name="cancel_audio">cancel_audio</string>
    <string name="open_watch">open_watch</string>
    <string name="remind">Remind</string>
    <string name="logouts">Are you sure you want to exit?</string>
    <string name="switch_crea">Rear camera</string>
    <string name="close_crea">Close the camera</string>
    <string name="error_in_check_sum">The verification code is not correct</string>
    <string name="error_in_second_name">Sub domain is not correct</string>
    <string name="exist_in_second_name">Sub domain name already exists</string>
    <string name="error_when_regist">Registration failed</string>
    <string name="need_meeting_psd">Meeting need password</string>
    <string name="meeting_password">Meeting Password</string>
    <string name="link_tip">Link</string>
    <string name="link_faild">Connection faild</string>
    <string name="link_break">Connection break</string>
    <string name="link_room_lock">Meeting is locked,please contact to the manager</string>
    <string name="checkmeeting_error_3001">Server license is expired.</string>
    <string name="checkmeeting_error_3002">Your company has been frozen.</string>
    <string name="invite">Invite</string>
    <string name="details">Meeting details</string>
    <string name="exit">Exit</string>
    <string name="meet_time">Meeting time</string>
    <string name="str_request_chairman">Request chairman</string>
    <string name="str_set_chairman">Set up as chairman</string>
    <string name="str_set_speaker">As the speaker</string>
    <string name="str_cancel_speaker">Cancel the speaker</string>
    <string name="str_start_speak">Let a spokesman</string>
    <string name="str_stop_speak">Cancel speak</string>
    <string name="str_share_doc">Shared document</string>
    <string name="viewpager_apply_speaker">Apply for speaker</string>
    <string name="meetingmember_stop_use_camera">Stop use camera</string>
    <string name="chairman_password">Chairman password</string>
    <string name="attend_password">Confuser password</string>
    <string name="live_password">BroadCast password</string>
    <string name="choose_et">(Certificate)</string>
    <string name="sunday_text">Sun</string>
    <string name="monday_text">Mon</string>
    <string name="tuesday_text">Tue</string>
    <string name="wednesday_text">Wed</string>
    <string name="thursday_text">Thu</string>
    <string name="friday_text">Fri</string>
    <string name="saturday_text">Sat</string>
    <string name="start_recording">Start recording</string>
    <string name="stop_recording">Stop recording</string>
    <string name="change_fouc_user">Switch to record video</string>
    <string name="set_focus">Designated as cloud recording video</string>
    <string name="hang_up">Hang up</string>
    <string name="set_focus_sip">Specify video to SIP user</string>
</resources>