<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/btn_start_recording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/start_recording"
        android:textSize="@dimen/text_size_20" />
    <TextView
        android:id="@+id/btn_stop_recording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/stop_recording"
        android:textSize="@dimen/text_size_20" />

    <TextView
        android:id="@+id/btn_change_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:visibility="gone"
        android:paddingTop="10dp"
        android:text="@string/change_fouc_user"
        android:textSize="@dimen/text_size_20" />

</LinearLayout>